--- a/Jupyter skeleton and tests/SetMembership.ipynb
+++ b/Jupyter skeleton and tests/SetMembership.ipynb
@@ -1324,56 +1324,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (1348205566.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[34], line 4\u001b[1;36m\u001b[0m\n\u001b[1;33m    test_list = ['best_tree_insert']\u001b[0m\n\u001b[1;37m                                    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
     "class PlotSyntheticData():\n",
-    "    def __init__(self):\n",
+    "    def __init__(self, size, repeats):\n",
     "        self.test = SyntheticTesting()\n",
     "        self.ss = SequentialSearchSet()\n",
     "        self.bst = BinarySearchTreeSet()\n",
     "        self.bbst = BalancedSearchTreeSet()\n",
     "        self.bf = BloomFilterSet()\n",
-    "        self.stuctures = [self.ss, self.bst, self.bbst, self.bf]\n",
+    "        self.size = size\n",
+    "        self.repeats = repeats\n",
+    "        self.results = [1]\n",
     "\n",
-    "    def run_tests(self, test_list):\n",
-    "        pass\n",
+    "    def clear_results(self):\n",
+    "        self.results = []\n",
     "\n",
-    "# TO BE COMPLETED\n",
+    "    def run_search_test(self, name):\n",
+    "        if name == 'sequential':\n",
+    "            result = self.test.test_search(self.ss, self.size, self.repeats)\n",
+    "        elif name == 'binary':\n",
+    "            result = self.test.test_search(self.bst, self.size, self.repeats)\n",
+    "        elif name == 'balanced':\n",
+    "            result = self.test.test_search(self.bbst, self.size, self.repeats)\n",
+    "        elif name == 'bloom':\n",
+    "            result = self.test.test_search(self.bf, self.size, self.repeats)\n",
+    "        else:\n",
+    "            yield ValueError(\"enter a valid search\")\n",
+    "        self.results.append([result, name])\n",
     "\n",
-    "test_list = ['best_tree_insert']\n",
-    "test = SyntheticTesting()\n",
-    "# test.testing_thing(10000)\n",
-    "# test.test_tree(100000, 20)\n",
-    "bst = BinarySearchTreeSet()\n",
-    "bst_times = test.test_insert(1000, 1, bst)\n",
-    "bbst = BalancedSearchTreeSet()\n",
-    "bbst_times = test.test_insert(1000, 1, bbst)\n",
-    "ss = SequentialSearchSet()\n",
-    "ss_times = test.test_insert(1000, 100, ss)\n",
-    "bf = BloomFilterSet()\n",
-    "bf_times = test.test_insert(1000, 1, bf)\n",
-    "nums = [i for i in range(1000)]\n",
+    "    def run_insert_test(self, name):  \n",
+    "        print('here')\n",
+    "        if name == 'sequential':\n",
+    "            result = self.test.test_insert(self.ss, self.size, self.repeats)\n",
+    "        elif name == 'binary':\n",
+    "            result = self.test.test_insert(self.bst, self.size, self.repeats)\n",
+    "        elif name == 'balanced':\n",
+    "            result = self.test.test_insert(self.bbst, self.size, self.repeats)\n",
+    "        elif name == 'bloom':\n",
+    "            result = self.test.test_insert(self.bf, self.size, self.repeats)\n",
+    "        else:\n",
+    "            yield ValueError(\"enter a valid search\")\n",
+    "        self.results.append([result, name])\n",
     "\n",
-    "plt.plot(nums, ss_times, label='Sequential')\n",
-    "plt.plot(nums, bst_times, label='Binary')\n",
-    "plt.plot(nums, bbst_times, label='Balanced')\n",
-    "plt.plot(nums, bf_times, label='Bloom')\n",
-    "plt.legend(loc='upper left')\n",
-    "plt.xlabel('Number of operations')\n",
-    "plt.ylabel('Time taken (microseconds)')\n",
-    "plt.title('Comparing structures for a large number of inputs')\n",
-    "plt.show()"
+    "    def plot_graphs(self, title=\"My Graph\"):\n",
+    "        scale = [i for i in range(self.size)]\n",
+    "        for results, name in self.results:\n",
+    "            plt.plot(scale, results, label=name)\n",
+    "        plt.legend(loc='upper left')\n",
+    "        plt.xlabel('number of operations')\n",
+    "        plt.ylabel('time taken (seconds)')\n",
+    "        plt.title(title)\n",
+    "        plt.show()\n",
+    "\n",
+    "\n",
+    "plot = PlotSyntheticData(1000, 10)\n",
+    "plot.run_insert_test('sequential')\n",
+    "plot.run_insert_test('binary')\n",
+    "plot.run_insert_test('balanced')\n",
+    "plot.run_insert_test('bloom')\n",
+    "# plot.plot_graphs()\n",
+    "plot.clear_results()\n"
    ]
   },
   {
