stopping my tests running if run all is clicked

--- a/Jupyter skeleton and tests/SetMembership.ipynb
+++ b/Jupyter skeleton and tests/SetMembership.ipynb
@@ -1465,21 +1465,21 @@
     "# plot.plot_graphs('Binary tree best and worst case synthetic search')\n",
     "# plot.clear_results()\n",
     "\n",
-    "plot.run_search_test('balanced', 'worse')\n",
-    "plot.run_search_test('balanced', 'best')\n",
-    "plot.plot_graphs('Balanced tree best and worst case synthetic search')\n",
-    "plot.clear_results()\n",
+    "# plot.run_search_test('balanced', 'worse')\n",
+    "# plot.run_search_test('balanced', 'best')\n",
+    "# plot.plot_graphs('Balanced tree best and worst case synthetic search')\n",
+    "# plot.clear_results()\n",
     "\n",
-    "plot.__init__(1_000, 10)\n",
-    "plot.run_insert_test('binary', 'worse')\n",
-    "plot.run_insert_test('binary', 'best')\n",
-    "plot.plot_graphs('Binary tree best and worst case synthetic insertion')\n",
-    "plot.clear_results()\n",
+    "# plot.__init__(1_000, 10)\n",
+    "# plot.run_insert_test('binary', 'worse')\n",
+    "# plot.run_insert_test('binary', 'best')\n",
+    "# plot.plot_graphs('Binary tree best and worst case synthetic insertion')\n",
+    "# plot.clear_results()\n",
     "\n",
-    "plot.__init__(100_000, 10)\n",
-    "plot.run_search_test('sequential', 'worse')\n",
-    "plot.run_search_test('sequential', 'best')\n",
-    "plot.plot_graphs('Sequential best and worst case synthetic search')\n"
+    "# plot.__init__(100_000, 10)\n",
+    "# plot.run_search_test('sequential', 'worse')\n",
+    "# plot.run_search_test('sequential', 'best')\n",
+    "# plot.plot_graphs('Sequential best and worst case synthetic search')\n"
    ]
   },
   {
