made the doc look nice adding headings regarding who wrote what code

--- a/Jupyter skeleton and tests/SetMembership.ipynb
+++ b/Jupyter skeleton and tests/SetMembership.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,9 +128,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Sequential search correctness test passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Delete this cell before submission.\n",
     "def sequentialCorrectnessTest():\n",
@@ -160,17 +168,31 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ben's implementation"
+    "### Ben's Binary Search Tree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        -> f\n",
+      "    -> e\n",
+      "        -> d\n",
+      "-> c\n",
+      "    -> b\n",
+      "        -> a\n"
+     ]
+    }
+   ],
    "source": [
     "class Node:\n",
     "    def __init__(self, key):\n",
@@ -251,9 +273,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Binary tree correctness test passed\n"
+     ]
+    }
+   ],
    "source": [
     "# Delete this cell before submission.\n",
     "def binaryTreeCorrectnessTest():\n",
@@ -291,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,17 +555,26 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Red-Black Tree Test"
+    "### Baicheng's Red-Black Tree Test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Balanced tree correctness test passed\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "def check_RBT_properties(tree):\n",
@@ -651,18 +690,21 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Hash with seed:\n",
     "$$\n",
     "    h = \\text{hash}(x + \\text{seed})\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "### Baicheng's Bloomfilter Class"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,9 +820,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size of bit array: 710\n",
+      "Number of hash functions: 4\n",
+      "✅ Bloom filter correctness test passed\n",
+      "    False positive count: 3\n",
+      "    False positive probability: 0.019230769230769232\n"
+     ]
+    }
+   ],
    "source": [
     "def bloomFilterCorrectnessTest():\n",
     "    # words to be added\n",
@@ -848,8 +902,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ben's synthetic generator class and test class"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,10 +1000,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Vincent's code to test balanced search tree and binary search tree on text files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time taken to insert 1: 0.000635 seconds\n",
+      "Time taken to insert 2: 0.000642 seconds\n",
+      "Time taken to insert 3: 0.000633 seconds\n",
+      "Time taken to search 1: 0.000652 seconds\n",
+      "Time taken to search 2: 0.000636 seconds\n",
+      "Time taken to search 3: 0.000639 seconds\n",
+      "Time taken to insert 1: 0.000646 seconds\n",
+      "Time taken to search 1: 0.000034 seconds\n",
+      "Time taken to insert 2: 0.000633 seconds\n",
+      "Time taken to search 2: 0.000636 seconds\n",
+      "Time taken to insert 3: 0.000634 seconds\n",
+      "Time taken to search 3: 0.000633 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "import timeit\n",
     "\"\"\"\n",
@@ -1070,10 +1159,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Rohan's code to test sequential set on text files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time taken to insert 1: 0.000608 seconds\n",
+      "Time taken to insert 2: 0.000606 seconds\n",
+      "Time taken to insert 3: 0.000750 seconds\n",
+      "-\n",
+      "Time taken to search 1: 0.000604 seconds\n",
+      "Time taken to search 2: 0.000614 seconds\n",
+      "Time taken to search 3: 0.000609 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "import timeit\n",
     "\n",
@@ -1143,10 +1254,32 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Rohan's code to test bloomfilter on text files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time taken to insert 1: 0.000681 seconds\n",
+      "Time taken to insert 2: 0.000670 seconds\n",
+      "Time taken to insert 3: 0.000690 seconds\n",
+      "-\n",
+      "Time taken to search 1: 0.000675 seconds\n",
+      "Time taken to search 2: 0.000667 seconds\n",
+      "Time taken to search 3: 0.000664 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "import timeit\n",
     "\n",
@@ -1219,8 +1352,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ben's Class to Run and Plot Synthetic Tests"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1293,41 +1434,100 @@
     "        plt.title(title)\n",
     "        plt.show()\n",
     "\n",
+    "# this will be used to create all of the graphs showing the best and worst case search and inserts for the various structures\n",
+    "def run_individual():\n",
+    "    plot = PlotSyntheticData(1_000_000, 10)\n",
     "\n",
-    "plot = PlotSyntheticData(1_000_000, 10)\n",
-    "# plot.run_insert_test('binary', 'worse')\n",
-    "# plot.run_insert_test('binary', 'best')\n",
-    "# plot.plot_graphs('Binary tree best and worst case synthetic insertion')\n",
-    "# plot.clear_results()\n",
-    "# plot.run_insert_test('balanced', 'worse')\n",
-    "# plot.run_insert_test('balanced', 'best')\n",
-    "# plot.plot_graphs('Balanced tree best and worst case synthetic insertion')\n",
-    "# plot.clear_results()\n",
-    "# plot.run_insert_test('bloom', 'worse')\n",
-    "# plot.run_insert_test('bloom', 'best')\n",
-    "# plot.plot_graphs('Bloomfilter best and worst case synthetic insertion')\n",
-    "# plot.clear_results()\n",
+    "    plot.run_insert_test('balanced', 'worse')\n",
+    "    plot.run_insert_test('balanced', 'best')\n",
+    "    plot.plot_graphs('Balanced tree average and worst case synthetic insertion')\n",
+    "    plot.clear_results()\n",
     "\n",
-    "# plot.run_search_test('binary', 'worse')\n",
-    "# plot.run_search_test('binary', 'best')\n",
-    "# plot.plot_graphs('Binary tree best and worst case synthetic search')\n",
-    "# plot.clear_results()\n",
+    "    plot.run_insert_test('bloom', 'best')\n",
+    "    plot.plot_graphs('Bloomfilter average  synthetic insertion')\n",
+    "    plot.clear_results()\n",
     "\n",
-    "# plot.run_search_test('balanced', 'worse')\n",
-    "# plot.run_search_test('balanced', 'best')\n",
-    "# plot.plot_graphs('Balanced tree best and worst case synthetic search')\n",
-    "# plot.clear_results()\n",
+    "    plot.run_search_test('binary', 'worse')\n",
+    "    plot.run_search_test('binary', 'best')\n",
+    "    plot.plot_graphs('Binary tree average and worst case synthetic search')\n",
+    "    plot.clear_results()\n",
     "\n",
-    "# plot.__init__(1_000, 10)\n",
-    "# plot.run_insert_test('binary', 'worse')\n",
-    "# plot.run_insert_test('binary', 'best')\n",
-    "# plot.plot_graphs('Binary tree best and worst case synthetic insertion')\n",
-    "# plot.clear_results()\n",
+    "    plot.run_search_test('balanced', 'worse')\n",
+    "    plot.run_search_test('balanced', 'best')\n",
+    "    plot.plot_graphs('Balanced tree average and worst case synthetic search')\n",
+    "    plot.clear_results()\n",
     "\n",
-    "# plot.__init__(100_000, 10)\n",
-    "# plot.run_search_test('sequential', 'worse')\n",
-    "# plot.run_search_test('sequential', 'best')\n",
-    "# plot.plot_graphs('Sequential best and worst case synthetic search')\n"
+    "    # bloomfilter doesnt have a best or worst case so only run one of them\n",
+    "    plot.run_search_test('bloom', 'best')\n",
+    "    plot.plot_graphs('Bloomfilter synthetic search')\n",
+    "    plot.clear_results()\n",
+    "\n",
+    "    # only run up to 1000 elements since worst case binary search takes forever to run\n",
+    "    plot.__init__(1_000, 10)\n",
+    "    plot.run_insert_test('binary', 'worse')\n",
+    "    plot.run_insert_test('binary', 'best')\n",
+    "    plot.plot_graphs('Binary tree average and worst case synthetic insertion')\n",
+    "    plot.clear_results()\n",
+    "\n",
+    "    # run 100,000 elements since sequential search takes so long to run in worst case \n",
+    "    plot.__init__(100_000, 10)\n",
+    "    plot.run_insert_test('sequential', 'worse')\n",
+    "    plot.run_insert_test('sequential', 'best')\n",
+    "    plot.plot_graphs('Sequential average and worst case synthetic insertion')\n",
+    "    plot.clear_results()\n",
+    "\n",
+    "\n",
+    "    plot.run_search_test('sequential', 'worse')\n",
+    "    plot.run_search_test('sequential', 'best')\n",
+    "    plot.plot_graphs('Sequential average and worst case synthetic search')\n",
+    "    plot.clear_results()\n",
+    "\n",
+    "\n",
+    "# this will be used to compare small sample sizes between the graphs\n",
+    "def run_small():\n",
+    "    # choose a small sample size of 1000 elements\n",
+    "    plot = PlotSyntheticData(1000, 10)\n",
+    "    plot.run_insert_test('sequential', 'best')\n",
+    "    plot.run_insert_test('binary', 'best')\n",
+    "    plot.run_insert_test('balanced', 'best')\n",
+    "    plot.run_insert_test('bloom')\n",
+    "    plot.plot_graphs('Average case graphs for all data structures up to 1000 inserted elements')\n",
+    "    plot.clear_results()\n",
+    "\n",
+    "    # same as above but for search\n",
+    "    plot.run_search_test('sequential', 'best')\n",
+    "    plot.run_search_test('binary', 'best')\n",
+    "    plot.run_search_test('balanced', 'best')\n",
+    "    plot.run_search_test('bloom')\n",
+    "    plot.plot_graphs('Average case graphs for all data structures up to 1000 search elements')\n",
+    "    plot.clear_results()\n",
+    "\n",
+    "# this will be used to compare the large sample sizes between graphs\n",
+    "def run_big():\n",
+    "    # sample size of 1,000,000 elements\n",
+    "    plot = PlotSyntheticData(1_000_000, 10)\n",
+    "    # we omit the sequential search since a 100,000 element test with 10 repeats takes ~20 minutes runtime\n",
+    "    plot.run_insert_test('binary', 'best')\n",
+    "    plot.run_insert_test('balanced', 'best')\n",
+    "    plot.run_insert_test('bloom')\n",
+    "    plot.plot_graphs('Average case graphs for all data structures up to 1000 inserted elements')\n",
+    "    plot.clear_results()\n",
+    "\n",
+    "    # same as above but for search\n",
+    "    plot.run_search_test('binary', 'best')\n",
+    "    plot.run_search_test('balanced', 'best')\n",
+    "    plot.run_search_test('bloom')\n",
+    "    plot.plot_graphs('Average case graphs for all data structures up to 1000 search elements')\n",
+    "    plot.clear_results()\n",
+    "\n",
+    "# runs all the graphs that were used in the report\n",
+    "def run_all():\n",
+    "    run_individual()\n",
+    "    run_big()\n",
+    "    run_small()\n",
+    "\n",
+    "# run_all()\n",
+    "\n"
    ]
   },
   {
