--- a/Jupyter skeleton and tests/SetMembership.ipynb
+++ b/Jupyter skeleton and tests/SetMembership.ipynb
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1521,6 +1521,7 @@
     "    plot.clear_results()\n",
     "\n",
     "# runs all the graphs that were used in the report\n",
+    "# this takes 2 hours to run so only run if needed\n",
     "def run_all():\n",
     "    run_individual()\n",
     "    run_big()\n",
